# senhor_barriga

./: pyproject.toml
senhor_barriga/: Whatsapp.py  aluguel_senhor_barriga.xlsx  app.py  senhor_barriga.ini
