[tool.poetry]
name = "senhor-barriga"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyautogui = "^0.9.54"
pandas = "^2.2.2"
pillow = "^10.3.0"
pyinstaller = "^6.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
